feat(direcciones): :zap: agregar nuevas paginas crud de direcciones

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -92,12 +92,34 @@
 
 /* Ajustar el ancho de las celdas a su contenido */
 #clientesTable {
-table-layout: auto; /* Esto ajusta la tabla al contenido */
-width: 100%; /* Asegura que la tabla ocupe todo el ancho disponible */
+    table-layout: auto;
+    /* Esto ajusta la tabla al contenido */
+    width: 100%;
+    /* Asegura que la tabla ocupe todo el ancho disponible */
 }
 
 /* Opcionalmente, puedes ajustar el tamaño de las columnas */
-#clientesTable th, #clientesTable td {
-white-space: nowrap; /* Evita que el texto se divida en varias líneas */
-padding: 8px; /* Ajusta el espaciado dentro de las celdas */
+#clientesTable th,
+#clientesTable td {
+    white-space: nowrap;
+    /* Evita que el texto se divida en varias líneas */
+    padding: 8px;
+    /* Ajusta el espaciado dentro de las celdas */
+}
+
+/* Ajustar el ancho de las celdas a su contenido */
+#direccionesTable {
+    table-layout: auto;
+    /* Esto ajusta la tabla al contenido */
+    width: 100%;
+    /* Asegura que la tabla ocupe todo el ancho disponible */
+}
+
+/* Opcionalmente, puedes ajustar el tamaño de las columnas */
+#direccionesTable th,
+#direccionesTable td {
+    white-space: nowrap;
+    /* Evita que el texto se divida en varias líneas */
+    padding: 8px;
+    /* Ajusta el espaciado dentro de las celdas */
 }
